--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,5 +24,43 @@
  .score-board {
      margin: 20px auto;
      border: 3px solid white;
+     border-radius: 4px;
+     text-align: center;
      width: 200px;
+     color: white;
+     font-size: 46px;
+     padding: 15px 20px;
+     font-family: asap, sans-serif;
+     position: relative;
  }
+
+ .badge {
+     background: #e2584d;
+     color: white;
+     font-size: 14px;
+     padding: 2px 10px;
+     font-family: asap, sans-serif;
+ }
+
+ #user-label {
+     position: absolute;
+     top: 30px;
+     left: -25px;
+ }
+
+ #comp-label {
+    position: absolute;
+    top: 30px;
+    right: -30px;
+}
+
+.results {
+    font-size: 40px;
+    color: white;
+}
+
+.results > p {
+    text-align: center;
+    font-family: asap, sans-serif;
+    font-weight: bold;
+}
