--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -85,6 +85,7 @@
     border-radius: 50%;
     padding: 10px;
     margin: 0 15px;
+    transition: all 0.3s ease;
 }
 
 .choice3 {
@@ -93,9 +94,20 @@
     border-radius: 50%;
     padding: 10px;
     margin: 0 15px;
+    transition: all 0.3s ease;
 }
 
 .choice1:hover {
+    background: #1753dd;
+    cursor: pointer;
+}
+
+.choice2:hover {
+    background: #1753dd;
+    cursor: pointer;
+}
+
+.choice3:hover {
     background: #1753dd;
     cursor: pointer;
 }
